# sifa-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml
ci/: README.md
src/sifa_mcp/: __init__.py  main.py
tests/: test_smoke.py
