[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sifa-mcp"
version = "0.1.3"
description = "MCP server for portable reputation and skills passports across Africa"
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mcp", "reputation", "kenya", "africa", "skills", "passport", "workers", "sifa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
]
dependencies = ["fastmcp>=2.0.0"]

[project.urls]
Homepage = "https://github.com/gabrielmahia/sifa-mcp"
Repository = "https://github.com/gabrielmahia/sifa-mcp"
Issues = "https://github.com/gabrielmahia/sifa-mcp/issues"
Documentation = "https://github.com/gabrielmahia/nairobi-stack"
"MCP Registry" = "https://registry.modelcontextprotocol.io"
Datasets = "https://huggingface.co/gmahia"
Evaluation = "https://github.com/gabrielmahia/kipimo"

[project.scripts]
sifa-mcp = "sifa_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
